--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the fractional excretion of urea<br> 
+    What is the fractional excretion of urea calculator?<br>
+    The fractional excertion of urea calculator is a tool that computes the fractional excertion of urea.<br>
+    How to calculate fractional excretion of urea?<br>
+    To calculate fractional excretion of urea you should use the following formula:<br>
+    fractional excretion of urea = (urine urea * serum creatinine) / (serum urea * urine creatinine) * 100<br>
+    Why use fractional excretion of urea calculator?<br>
+    The FEUrea calculator is used in order to find the cause of acute kidney injury.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
